...
            }
          }
        }
      }
    } else {
      settingsView
        .navigationTitle("Settings")
    }
  }
  
  private var settingsView: some View {
    List {
      Section {
...
                title: "[Dev] Link receipt"
              )
            }
          }
          
          Button(action: {
            guard let url = URL.apple.manageSubscriptions else { return }
            if UIApplication.shared.canOpenURL(url) {
              // Opens Apple's 'manage subscription' screen
              UIApplication.shared.open(url, options: [:])
            }
          }) {
            premiumActionView
...
