...
        navigationItem.leftBarButtonItem = UIBarButtonItem(
            title: NSLocalizedString("Done", comment: "Done button on left side of the Settings view controller title bar"),
            style: UIBarButtonItemStyle.done,
            target: navigationController, action: #selector((navigationController as! SettingsNavigationController).SELdone))
        navigationItem.leftBarButtonItem?.accessibilityIdentifier = "AppSettingsTableViewController.navigationItem.leftBarButtonItem"

        tableView.accessibilityIdentifier = "AppSettingsTableViewController.tableView"
        
        // Refresh the user's FxA profile upon viewing settings. This will update their avatar,
        // display name, etc.
        if AppConstants.MOZ_SHOW_FXA_AVATAR {
            profile.getAccount()?.updateProfile()
        }
...
